2012-09-08  Peter Jones <pjones@redhat.com>

	* grub-core/Makefile.core.def (efifwsetup): New module.
	* grub-core/commands/efi/efifwsetup.c: New file.
	* grub-core/kern/efi/efi.c (grub_efi_set_variable): New function
	* include/grub/efi/api.h (GRUB_EFI_OS_INDICATIONS_BOOT_TO_FW_UI):
	New define.
	* include/grub/efi/efi.h (grub_efi_set_variable): New proto.

2012-09-05  Jiri Slaby <jslaby@suse.cz>

	* configure.ac: Add SuSe path.

2012-09-05  Colin Watson  <cjwatson@ubuntu.com>

	* NEWS: Fix typo.

2012-09-05  Colin Watson  <cjwatson@ubuntu.com>

	* util/import_gcry.py: Sort cipher_files, to make build system
	generation more deterministic.

2012-09-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ieee1275/ofdisk.c (scan): Check function return value.
	* grub-core/lib/ieee1275/datetime.c (grub_get_datetime): Likewise.
	(grub_set_datetime): Likewise.

2012-09-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/script/yylex.l: Ignore unused-function and sign-compare
	warnings.

2012-09-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/partmap/dvh.c (grub_dvh_is_valid): Add missing byteswap.

2012-09-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/xfs.c (grub_xfs_read_block): Make keys a const pointer.

2012-09-04  Colin Watson  <cjwatson@ubuntu.com>

	* Makefile.am (EXTRA_DIST): Add linguas.sh.  It's only strictly
	required for checkouts from bzr, but it may be useful for users or
	distributors wishing to update translations against a tarball
	distribution, and it can be helpful for the tarball to be a superset
	of what's in bzr.

2012-09-04  Colin Watson  <cjwatson@ubuntu.com>

	* Makefile.am (EXTRA_DIST): Add
	grub-core/tests/boot/linux.init-mips.S,
	grub-core/tests/boot/linux.init-ppc.S, and
	grub-core/tests/boot/linux-ppc.cfg.

2012-09-04  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/mmap/mips/loongson: Remove empty directory.

2012-09-04  Colin Watson  <cjwatson@ubuntu.com>
